Issue with horizontal scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ a:hover {
 
   .languageButtons
   {
-    font-size: 2.5vw;
+    font-size: 2vw;
   }
 
   #homeLogo
